syntax = "proto3";

package quibbble.com;
option go_package = "./tictactoe";

message TicTacToeRow {
    repeated string column = 1;
}

message TicTacToeSnapshotSpec {
    repeated TicTacToeRow Row  = 1;
}

message TicTacToeMarkActionSpec {
    int64 row = 1;
    int64 column = 2;
}
